changed index.html style

--- a/src/index.html
+++ b/src/index.html
@@ -10,28 +10,21 @@
 <body>
 	<div class="rootpage">
 		<h1>Верстка «NEW_PROJECT_NAME»</h1>
-		<div class="rootpage__info">
-			Особенности проекта
-		</div>
 		<h2>Готовые страницы:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Главная</a></li>
 			<li><a target="_blank" href="product.html">Продукт</a></li>
 		</ol>
-		<h2>Попапы:</h2>
-		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html#"></a></li>
-		</ol>
 		<div class="rootpage__tnx">
 			<h2>Спасибо за заказ!</h2>
-			<p>Буду рад (а) хорошему отзыву.</p>
+			<p>Буду рад хорошему отзыву.</p>
 			<p>Обращайтесь еще!</p>
 		</div>
 		<div class="rootpage__contacts">
 			<h2>Мои контакты:</h2>
-			<p>Почта: <a href="mailto:email@gmail.com">email@gmail.com</a></p>
-			<p>Телефон: <a href="tel:8800800800">8 800 800 800</a></p>
-			<p>Соц. сеть: <a href="">ссылка на соц. сеть</a></p>
+			<p>Почта: <a href="mailto:vitaliy.michschenko@gmail.com">vitaliy.michschenko@gmail.com</a></p>
+			<p>Телефон: <a href="tel:89009188421">8 900 918 84-21</a></p>
+			<p>Telegram:<a href="https://t.me/mustermann011">https://t.me/mustermann011</a></p>
 		</div>
 	</div>
 </body>
@@ -55,8 +48,6 @@
 		padding: 0;
 		min-width: 320px;
 		width: 100%;
-		color: #fff;
-		background-color: #5e5373;
 	}
 
 	body {
@@ -68,12 +59,10 @@
 
 	a {
 		text-decoration: underline;
-		color: #ebe691
 	}
 
 	a:visited {
 		text-decoration: underline;
-		color: #aaa768;
 	}
 
 	a:hover {
@@ -108,7 +97,6 @@
 	}
 
 	h1 {
-		color: #ebe691;
 		font-size: 2.5rem;
 		margin: 0px 0px 1.25rem 0px;
 	}
@@ -121,7 +109,6 @@
 	}
 
 	h2 {
-		color: #ebe691;
 		font-size: 1.25rem;
 		margin: 0px 0px 1rem 0px;
 	}
@@ -163,16 +150,13 @@
 	}
 
 	.rootpage__contacts {
-		background: #32b5a4;
-
+		border: 2px solid #000;
 	}
 
-	.rootpage__contacts a {
-		color: #ebe691;
-	}
+	.rootpage__contacts a {}
 
 	.rootpage__tnx {
-		background: #c22d63;
+		border: 2px solid #000;
 		margin: 0px 0px 1rem 0px;
 	}
 </style>
